# LinuxDevelopment2024

01_TerminalProject/: Makefile  README.md  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debbuging/: Makefile  range.c  test1.gdb  test2.gdb
05_Regexps/: Makefile  esub.c
07_Environmental/: CMakeLists.txt  README.md  rhasher.c
07_Environmental/test/: testmd5.sh  testsha1.sh
08_I18n/: CMakeLists.txt  README.md  binsearch.c
08_I18n/lang/: messages.pot
09_PatchDiff/: Makefile  custom_chars.patch  custom_seed.patch  custom_size.patch  maze.c
10_LibTesting/: CMakeLists.txt  README.md  buf.c  buf.h  tests.c
11_Documenting/: CMakeLists.txt  README.md  binsearch.c
11_Documenting/lang/: messages.pot  ru_RU.po
12_InstallPackaging/: CMakeLists.txt  README.md  install.cmake  main.c
12_InstallPackaging/include/: binsearch.h
12_InstallPackaging/lang/: en_US.po  messages.pot  ru_RU.po  ru_RU.po~
12_InstallPackaging/src/: binsearch.c
12_InstallPackaging/test/: CMakeLists.txt  test_RU.sh  test_US.sh
